split up escan and monaco directory logic
Former-commit-id: 425f41c68e787fb1ea324cdccbda9d27135c8aec

--- a/examples/site-specific/cancer-care-associates/voila/Compare Monaco and iCOM.ipynb
+++ b/examples/site-specific/cancer-care-associates/voila/Compare Monaco and iCOM.ipynb
@@ -110,7 +110,9 @@
    "outputs": [],
    "source": [
     "class Data(traitlets.HasTraits):\n",
-    "    site = traitlets.Unicode()\n",
+    "    monaco_site = traitlets.Unicode()\n",
+    "    escan_site = traitlets.Unicode()\n",
+    "    \n",
     "    patient_id = traitlets.Unicode()\n",
     "    delivery_timestamp = traitlets.List(traitlets.Unicode())\n",
     "    plan_names = traitlets.List(traitlets.Unicode())\n",
@@ -135,9 +137,9 @@
    "source": [
     "def update_file_paths(change):\n",
     "    patient_id = data.patient_id\n",
-    "    site = data.site\n",
+    "    monaco_site = data.monaco_site\n",
     "    \n",
-    "    monaco_directory = SITE_DIRECTORIES[site]['monaco']\n",
+    "    monaco_directory = SITE_DIRECTORIES[monaco_site]['monaco']\n",
     "    \n",
     "    \n",
     "    all_tel_paths = list(monaco_directory.glob(f'*~{patient_id}/plan/*/*tel.1'))\n",
@@ -237,7 +239,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "site_select = ipywidgets.Select(\n",
+    "monaco_site_select = ipywidgets.Select(\n",
     "    options=SITE_DIRECTORIES.keys(),\n",
     "    value=None,\n",
     "    rows=len(SITE_DIRECTORIES.keys()),\n",
@@ -245,16 +247,36 @@
     "    disabled=False\n",
     ")\n",
     "\n",
-    "def handle_site_change(change):\n",
+    "def handle_monaco_site_change(change):\n",
     "    if change.new:\n",
     "        patient_id_text.disabled = False\n",
     "    \n",
     "    patient_id_text.value = ''\n",
     "    data.patient_id = ''\n",
     "    \n",
-    "    data.site = site_select.value\n",
+    "    data.monaco_site = monaco_site_select.value\n",
     "    \n",
-    "site_select.observe(handle_site_change, names=['value'])"
+    "monaco_site_select.observe(handle_monaco_site_change, names=['value'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "escan_site_select = ipywidgets.Select(\n",
+    "    options=SITE_DIRECTORIES.keys(),\n",
+    "    value=None,\n",
+    "    rows=len(SITE_DIRECTORIES.keys()),\n",
+    "    description='Site',\n",
+    "    disabled=False\n",
+    ")\n",
+    "\n",
+    "def handle_escan_site_change(change):    \n",
+    "    data.escan_site = escan_site_select.value\n",
+    "    \n",
+    "escan_site_select.observe(handle_escan_site_change, names=['value'])"
    ]
   },
   {
@@ -392,12 +414,15 @@
     "\n",
     "def run_calculation():\n",
     "    patient_id = data.patient_id\n",
+    "    \n",
     "    monaco_plans = monaco_select.value\n",
     "    icom_deliveries = icom_select.value\n",
-    "    site = data.site\n",
     "    \n",
-    "    monaco_directory = SITE_DIRECTORIES[site]['monaco']\n",
-    "    pdf_directory = SITE_DIRECTORIES[site]['escan']\n",
+    "    monaco_site = data.monaco_site\n",
+    "    escan_site = data.escan_site\n",
+    "    \n",
+    "    monaco_directory = SITE_DIRECTORIES[monaco_site]['monaco']\n",
+    "    pdf_directory = SITE_DIRECTORIES[escan_site]['escan']\n",
     "    \n",
     "    print_markdown('## Output')\n",
     "    \n",
@@ -515,7 +540,8 @@
     ")\n",
     "\n",
     "def handle_run_calc_button_press(_):\n",
-    "    run_calculation()\n",
+    "    with output:\n",
+    "        run_calculation()\n",
     "    \n",
     "run_calc_button.on_click(handle_run_calc_button_press)"
    ]
@@ -533,7 +559,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Site\n",
+    "## Monaco Site\n",
     "\n",
     "Choose the site to search for patient data"
    ]
@@ -544,7 +570,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "site_select"
+    "monaco_site_select"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## eSCAN Site\n",
+    "\n",
+    "Chose the site to save the eSCAN PDF"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "escan_site_select"
    ]
   },
   {
@@ -618,13 +662,6 @@
    "source": [
     "output"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
