make output clear on changes
Former-commit-id: 95302e4f74c326de95d15efe4f8af22d358164af

--- a/examples/site-specific/cancer-care-associates/voila/Compare Monaco and iCOM.ipynb
+++ b/examples/site-specific/cancer-care-associates/voila/Compare Monaco and iCOM.ipynb
@@ -16,6 +16,7 @@
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt  # for plotting\n",
     "\n",
+    "# import ipyvuetify\n",
     "import traitlets\n",
     "import IPython.display as display\n",
     "import ipywidgets"
@@ -52,15 +53,15 @@
     "SITE_DIRECTORIES = {\n",
     "    'rccc': {\n",
     "        'monaco': pathlib.Path(r'\\\\monacoda\\FocalData\\RCCC\\1~Clinical'),\n",
-    "        'escan': pathlib.Path(r'P:\\Scanned Documents\\RT\\PhysChecks\\Logfile PDFs')\n",
+    "        'escan': pathlib.Path(r'\\\\pdc\\Shared\\Scanned Documents\\RT\\PhysChecks\\Logfile PDFs')\n",
     "    },\n",
     "    'nbcc': {\n",
-    "        'monaco': pathlib.Path(r'X:\\NBCCC\\1~Clinical'),\n",
-    "        'escan': pathlib.Path(r'\\\\10.0.0.4\\Shared\\SCAN\\ESCAN\\Phys\\Logfile PDFs')\n",
+    "        'monaco': pathlib.Path(r'\\\\tunnel-nbcc-monaco\\FOCALDATA\\NBCCC\\1~Clinical'),\n",
+    "        'escan': pathlib.Path(r'\\\\tunnel-nbcc-pdc\\Shared\\SCAN\\ESCAN\\Phys\\Logfile PDFs')\n",
     "    },\n",
     "    'sash': {\n",
-    "        'monaco': pathlib.Path(r'W:\\SASH\\1~Clinical'),\n",
-    "        'escan': pathlib.Path(r'\\\\10.0.0.3\\SASH-Mosaiq-eScan\\Logfile PDFs')\n",
+    "        'monaco': pathlib.Path(r'\\\\tunnel-sash-monaco\\Users\\Public\\Documents\\CMS\\FocalData\\SASH\\1~Clinical'),\n",
+    "        'escan': pathlib.Path(r'\\\\tunnel-sash-physics-server\\SASH-Mosaiq-eScan\\Logfile PDFs')\n",
     "    }\n",
     "}"
    ]
@@ -72,7 +73,7 @@
    "outputs": [],
    "source": [
     "icom_directory = pathlib.Path(r'\\\\rccc-physicssvr\\iComLogFiles\\patients')\n",
-    "output_directory = pathlib.Path(r'S:\\Physics\\Patient Specific Logfile Fluence')"
+    "output_directory = pathlib.Path(r'\\\\pdc\\PExIT\\Physics\\Patient Specific Logfile Fluence')"
    ]
   },
   {
@@ -99,7 +100,7 @@
     "    'distance_mm_threshold': 0.5,\n",
     "    'local_gamma': True,\n",
     "    'quiet': True,\n",
-    "    'max_gamma': 2,\n",
+    "    'max_gamma': None,\n",
     "}"
    ]
   },
@@ -119,7 +120,13 @@
     "    \n",
     "data = Data()\n",
     "\n",
-    "\n"
+    "\n",
+    "output = ipywidgets.Output()\n",
+    "def clear_output(_):\n",
+    "    with output:\n",
+    "        display.clear_output()\n",
+    "        \n",
+    "data.observe(clear_output)"
    ]
   },
   {
@@ -127,7 +134,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# data.observe?"
+   ]
   },
   {
    "cell_type": "code",
@@ -184,7 +193,8 @@
     "    monaco_select.rows = len(data.plan_names)\n",
     "    \n",
     "\n",
-    "data.observe(handle_monaco_select_change, names=['plan_names'])"
+    "data.observe(handle_monaco_select_change, names=['plan_names'])\n",
+    "monaco_select.observe(clear_output)"
    ]
   },
   {
@@ -213,7 +223,8 @@
     "    icom_select.options = data.delivery_timestamp\n",
     "    icom_select.rows = len(data.delivery_timestamp)\n",
     "\n",
-    "data.observe(handle_icom_select_change, names=['delivery_timestamp'])"
+    "data.observe(handle_icom_select_change, names=['delivery_timestamp'])\n",
+    "icom_select.observe(clear_output)"
    ]
   },
   {
@@ -303,8 +314,8 @@
     "    pass_ratio = np.sum(valid_gamma <= 1) / len(valid_gamma)\n",
     "\n",
     "    plt.title(\n",
-    "        \"Local Gamma ({0}%/{1}mm) | Percent Pass: {2:.2f} % | Max Gamma: {3:.2f}\".format(\n",
-    "            percent, dist, pass_ratio * 100, np.max(valid_gamma)\n",
+    "        \"Local Gamma ({0}%/{1}mm) | Percent Pass: {2:.2f} % | Mean Gamma: {3:.2f} | Max Gamma: {4:.2f}\".format(\n",
+    "            percent, dist, pass_ratio * 100, np.mean(valid_gamma), np.max(valid_gamma)\n",
     "        )\n",
     "    )"
    ]
@@ -396,8 +407,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "output = ipywidgets.Output()\n",
-    "\n",
     "def display_content(header, result):\n",
     "    with output:\n",
     "        display.display(\n",
@@ -662,6 +671,13 @@
    "source": [
     "output"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -680,7 +696,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.7.5"
   }
  },
  "nbformat": 4,
