show table instead of showing 'closest cutout' in electron factor code
Former-commit-id: e64e49fff322ce26823458157bdc20329e992eca [formerly f9ebfe7776a1bfd6c511129e626266cced7e04a9]
Former-commit-id: ea8af94eaf90df4b2fc9eb24945ee8e373b1f4eb

--- a/examples/site-specific/cancer-care-associates/production/Electron Factors/Electron insert user interface.ipynb
+++ b/examples/site-specific/cancer-care-associates/production/Electron Factors/Electron insert user interface.ipynb
@@ -13,6 +13,8 @@
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
+    "from IPython import display\n",
+    "\n",
     "import shapely"
    ]
   },
@@ -52,15 +54,15 @@
    "outputs": [],
    "source": [
     "rccc_string_search_pattern = (\n",
-    "    r'\\\\MONACODA\\FocalData\\RCCC\\1~Clinical\\*{}\\plan\\*\\*tel.1'.format(patientID))\n",
+    "    r'\\\\monacoda\\FocalData\\RCCC\\1~Clinical\\*{}\\plan\\*\\*tel.1'.format(patientID))\n",
     "rccc_filepath_list = glob(rccc_string_search_pattern)\n",
     "\n",
     "nbccc_string_search_pattern = (\n",
-    "    r'X:\\NBCCC\\1~Clinical\\*{}\\plan\\*\\*tel.1'.format(patientID))\n",
+    "    r'\\\\tunnel-nbcc-monaco\\FOCALDATA\\NBCCC\\1~Clinical\\*{}\\plan\\*\\*tel.1'.format(patientID))\n",
     "nbccc_filepath_list = glob(nbccc_string_search_pattern)\n",
     "\n",
     "sash_string_search_pattern = (\n",
-    "    r'W:\\SASH\\1~Clinical\\*{}\\plan\\*\\*tel.1'.format(patientID))\n",
+    "    r'\\\\tunnel-sash-monaco\\Users\\Public\\Documents\\CMS\\FocalData\\SASH\\1~Clinical\\*{}\\plan\\*\\*tel.1'.format(patientID))\n",
     "sash_filepath_list = glob(sash_string_search_pattern)\n",
     "\n",
     "\n",
@@ -397,32 +399,22 @@
     "            plot_model(\n",
     "                width_data[reference], length_data[reference], factor_data[reference])\n",
     "            \n",
-    "            \n",
-    "        weighted_difference_squares = (\n",
-    "            (width_data[reference] - width) ** 2 + \n",
-    "            0.5 * (length_data[reference] - length) ** 2\n",
-    "        )\n",
-    "        closest_cutout = np.argmin(weighted_difference_squares)\n",
-    "        closest_width = width_data[reference][closest_cutout]\n",
-    "        closest_length = length_data[reference][closest_cutout]\n",
-    "        closest_factor = factor_data[reference][closest_cutout]\n",
-    "        print('')\n",
-    "        print(\n",
-    "            \"Closest cutout within data\\n\"\n",
-    "            \"  Width: {0:0.2f} cm\\n\"\n",
-    "            \"  Length: {1:0.2f} cm\\n\"\n",
-    "            \"  Factor: {2:0.3f}\".format(closest_width, closest_length, closest_factor)\n",
-    "        )\n",
+    "        plt.show()\n",
     "        \n",
-    "        plt.show()"
+    "        reference_data_table = pd.concat(\n",
+    "            [\n",
+    "                width_data[reference],\n",
+    "                length_data[reference],\n",
+    "                factor_data[reference]\n",
+    "            ],\n",
+    "            axis=1            \n",
+    "        )\n",
+    "        reference_data_table.sort_values(\n",
+    "            ['RCCC Inverse factor (dose open / dose cutout)'], \n",
+    "            ascending=False, inplace=True)\n",
+    "    \n",
+    "        display.display(reference_data_table)        "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -442,7 +434,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.5"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
