handle multi-fraction dicom file
Former-commit-id: b44bf3e8dcbc13024b3d70bdad35814f7e027d8b

--- a/examples/site-specific/cancer-care-associates/production/Logfiles/MU Density/Investigating Failing Cases/001-tel-reading-missing-cps.ipynb
+++ b/examples/site-specific/cancer-care-associates/production/Logfiles/MU Density/Investigating Failing Cases/001-tel-reading-missing-cps.ipynb
@@ -6,6 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
@@ -31,7 +32,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pymedphys"
+    "import pymedphys\n",
+    "from pymedphys._mosaiq.helpers import FIELD_TYPES"
    ]
   },
   {
@@ -52,8 +54,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_file_type(input_paths, file_type):\n",
-    "    paths = [path for path in input_paths if file_type in path.name]\n",
+    "def get_file_type(input_paths, file_type, exact_name=False):\n",
+    "    if exact_name:\n",
+    "        paths = [path for path in input_paths if path.name == file_type]\n",
+    "    else:\n",
+    "        paths = [path for path in input_paths if file_type in path.name]\n",
+    "        \n",
     "    assert len(paths) == 1\n",
     "    return paths[0]"
    ]
@@ -74,8 +80,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tel_path = get_file_type(current_paths, \"tel\")\n",
+    "tel_path_fraction_1 = get_file_type(current_paths, \"tel.1\", exact_name=True)\n",
+    "tel_path_fraction_2 = get_file_type(current_paths, \"rxB_tel.1\", exact_name=True)\n",
     "dcm_path = get_file_type(current_paths, \"dcm\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tel_path_fraction_1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dcm_path"
    ]
   },
   {
@@ -85,10 +117,11 @@
    "outputs": [],
    "source": [
     "delivery_dcm = pymedphys.Delivery.from_dicom(\n",
-    "    pydicom.read_file(str(dcm_path), force=True)\n",
+    "    pydicom.read_file(str(dcm_path), force=True),\n",
+    "    fraction_number=1\n",
     ")\n",
     "\n",
-    "delivery_monaco = pymedphys.Delivery.from_monaco(tel_path)"
+    "delivery_monaco = pymedphys.Delivery.from_monaco(tel_path_fraction_1)"
    ]
   },
   {
@@ -100,6 +133,185 @@
     "plt.plot(delivery_monaco.gantry)\n",
     "plt.plot(delivery_dcm.gantry)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dcm_mudensity = delivery_dcm.mudensity()\n",
+    "monaco_mudensity = delivery_monaco.mudensity()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "GRID = pymedphys.mudensity.grid()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pymedphys.mudensity.display(GRID, dcm_mudensity)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pymedphys.mudensity.display(GRID, monaco_mudensity)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "diff = monaco_mudensity - dcm_mudensity"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pymedphys.mudensity.display(GRID, diff)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_patient_fields(cursor, patient_id):\n",
+    "    \"\"\"Returns all of the patient fields for a given Patient ID.\n",
+    "    \"\"\"\n",
+    "    patient_id = str(patient_id)\n",
+    "\n",
+    "    patient_field_results = pymedphys.mosaiq.execute(\n",
+    "        cursor,\n",
+    "        \"\"\"\n",
+    "        SELECT\n",
+    "            TxField.FLD_ID,\n",
+    "            TxField.Field_Label,\n",
+    "            TxField.Field_Name,\n",
+    "            TxField.Version,\n",
+    "            TxField.Meterset,\n",
+    "            TxField.Type_Enum,\n",
+    "            Site.Site_Name\n",
+    "        FROM Ident, TxField, Site\n",
+    "        WHERE\n",
+    "            TxField.Pat_ID1 = Ident.Pat_ID1 AND\n",
+    "            TxField.SIT_Set_ID = Site.SIT_Set_ID AND\n",
+    "            Ident.IDA = %(patient_id)s\n",
+    "        \"\"\",\n",
+    "        {\"patient_id\": patient_id},\n",
+    "    )\n",
+    "\n",
+    "    table = pd.DataFrame(\n",
+    "        data=patient_field_results,\n",
+    "        columns=[\n",
+    "            \"field_id\",\n",
+    "            \"field_label\",\n",
+    "            \"field_name\",\n",
+    "            \"field_version\",\n",
+    "            \"monitor_units\",\n",
+    "            \"field_type\",\n",
+    "            \"site\",\n",
+    "        ],\n",
+    "    )\n",
+    "\n",
+    "    table.drop_duplicates(inplace=True)\n",
+    "\n",
+    "    table[\"field_type\"] = [FIELD_TYPES[item] for item in table[\"field_type\"]]\n",
+    "\n",
+    "    return table"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mosaiq_sql_host = 'physics-server:31433'\n",
+    "patient_id = '200054'\n",
+    "\n",
+    "with pymedphys.mosaiq.connect(mosaiq_sql_host) as cursor:\n",
+    "    patient_fields = get_patient_fields(cursor, patient_id)\n",
+    "    \n",
+    "patient_fields"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with pymedphys.mosaiq.connect(mosaiq_sql_host) as cursor:\n",
+    "    mosaiq_delivery = pymedphys.Delivery.from_mosaiq(cursor, 7115)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mosaiq_mudensity = mosaiq_delivery.mudensity()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pymedphys.mudensity.display(GRID, mosaiq_mudensity)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pymedphys.mudensity.display(GRID, mosaiq_mudensity - dcm_mudensity)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
