clear out empty records

--- a/examples/site-specific/cancer-care-associates/production/Logfiles/MU Density/Clear out empty patient iCOM records/Remove Empty iCOM Deliveries.ipynb
+++ b/examples/site-specific/cancer-care-associates/production/Logfiles/MU Density/Clear out empty patient iCOM records/Remove Empty iCOM Deliveries.ipynb
@@ -6,6 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
     "import lzma\n",
     "import pathlib\n",
     "\n",
@@ -59,6 +60,21 @@
    "outputs": [],
    "source": [
     "error_in_record"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for record in error_in_record:\n",
+    "\n",
+    "    new_location = record.parent.parent.joinpath('unknown_error_in_record', record.parent.name, record.name)\n",
+    "    new_dir = new_location.parent\n",
+    "    new_dir.mkdir(parents=True, exist_ok=True)\n",
+    "    \n",
+    "    os.rename(record, new_location)"
    ]
   }
  ],
