make iCOM deliveries with no MU not save, provide further logging info

--- a/examples/site-specific/cancer-care-associates/production/Logfiles/MU Density/Clear out empty patient iCOM records/Remove Empty iCOM Deliveries.ipynb
+++ b/examples/site-specific/cancer-care-associates/production/Logfiles/MU Density/Clear out empty patient iCOM records/Remove Empty iCOM Deliveries.ipynb
@@ -28,7 +28,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "icom_records = list(icom_dir.glob('**/*.xz'))"
+    "icom_records = list(icom_dir.glob('*/*.xz'))"
    ]
   },
   {
