patient name formatting, only show >0 MU fields from Mosaiq
Former-commit-id: 9274352474fd12a0394b069ed1a9090798ccd661

--- a/examples/site-specific/cancer-care-associates/production/Logfiles/MU Density/Clear out empty patient iCOM records/Remove Empty iCOM Deliveries.ipynb
+++ b/examples/site-specific/cancer-care-associates/production/Logfiles/MU Density/Clear out empty patient iCOM records/Remove Empty iCOM Deliveries.ipynb
@@ -49,6 +49,9 @@
     "        if len(delivery.mu) == 0:\n",
     "            print(f\"Unlinked {icom_path}\")\n",
     "            icom_path.unlink()\n",
+    "        elif delivery.mu[-1] == 0:\n",
+    "            print(f\"Unlinked {icom_path}\")\n",
+    "            icom_path.unlink()\n",
     "    except:\n",
     "        error_in_record.append(icom_path)"
    ]
