make static fields work
Former-commit-id: 498eceae7b1585a5b19b8faecfb13835f09aa8bd

--- a/examples/site-specific/cancer-care-associates/production/Logfiles/MU Density/Investigating Failing Cases/002-tel-reading-missing-cps.ipynb
+++ b/examples/site-specific/cancer-care-associates/production/Logfiles/MU Density/Investigating Failing Cases/002-tel-reading-missing-cps.ipynb
@@ -6,6 +6,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import lzma\n",
+    "\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -90,7 +92,8 @@
    "outputs": [],
    "source": [
     "tel_path = get_file_type(current_paths, \"tel.1\", exact_name=True)\n",
-    "dcm_path = get_file_type(current_paths, \"dcm\")"
+    "dcm_path = get_file_type(current_paths, \"dcm\")\n",
+    "icom_path = get_file_type(current_paths, \"xz\")"
    ]
   },
   {
@@ -117,6 +120,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "icom_path"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "delivery_dcm = pymedphys.Delivery.from_dicom(\n",
     "    pydicom.read_file(str(dcm_path), force=True)\n",
     ")"
@@ -128,7 +140,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "delivery_monaco = pymedphys.Delivery.from_monaco(tel_path)"
+    "delivery_monaco = pymedphys.Delivery.from_monaco(tel_path)\n",
+    "delivery_monaco.mu"
    ]
   },
   {
@@ -137,8 +150,73 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.plot(delivery_monaco.gantry)\n",
-    "plt.plot(delivery_dcm.gantry)"
+    "with lzma.open(icom_path, \"r\") as f:\n",
+    "    icom_stream = f.read()\n",
+    "    \n",
+    "delivery_icom = pymedphys.Delivery.from_icom(icom_stream)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mlc_index = 40\n",
+    "side = 0\n",
+    "\n",
+    "mlc_icom = [item[mlc_index][side] for item in delivery_icom.mlc]\n",
+    "mlc_dcm = [item[mlc_index][side] for item in delivery_dcm.mlc]\n",
+    "mlc_monaco = [item[mlc_index][side] for item in delivery_monaco.mlc]\n",
+    "\n",
+    "# delivery_icom.mlc[0][40][0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.plot(delivery_icom.mu, mlc_icom)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.plot(delivery_dcm.mu, mlc_dcm)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.plot(delivery_monaco.mu, mlc_monaco)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.plot(delivery_icom.mu, mlc_icom)\n",
+    "plt.plot(delivery_dcm.mu, mlc_dcm)\n",
+    "plt.plot(delivery_monaco.mu, mlc_monaco)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "delivery_dcm.gantry"
    ]
   },
   {
