example with static field failing

--- a/examples/site-specific/cancer-care-associates/production/Logfiles/MU Density/Investigating Failing Cases/002-tel-reading-missing-cps.ipynb
+++ b/examples/site-specific/cancer-care-associates/production/Logfiles/MU Density/Investigating Failing Cases/002-tel-reading-missing-cps.ipynb
@@ -44,7 +44,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_paths = pymedphys.zip_data_paths(\"tel-dicom-pairs.zip\", check_hash=False)\n",
+    "data_paths = pymedphys.zip_data_paths(\"tel-dicom-pairs.zip\")\n",
     "data_paths"
    ]
   },
