--- a/examples/protyping/dicom/dedupe-contour/000-scratch.ipynb
+++ b/examples/protyping/dicom/dedupe-contour/000-scratch.ipynb
@@ -49,93 +49,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "current_contour_sequence = contour_sequences[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# current_contour_sequence"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "contours_by_z = {}\n",
-    "\n",
-    "for contour in current_contour_sequence.ContourSequence:\n",
-    "    if contour.ContourGeometricType != 'CLOSED_PLANAR':\n",
-    "        raise ValueError(\"Only CLOSED_PLANAR type is supported\")\n",
-    "        \n",
-    "    contour_data = contour.ContourData\n",
-    "        \n",
-    "    x = np.array(contour_data[0::3])\n",
-    "    y = np.array(contour_data[1::3])\n",
-    "    z = np.array(contour_data[2::3])\n",
-    "    \n",
-    "    unique_z = np.unique(z)\n",
-    "    \n",
-    "    if len(unique_z) != 1:\n",
-    "        raise ValueError(\"All z values should be equal\")\n",
-    "        \n",
-    "    z = unique_z[0]\n",
-    "    polygon = shapely.geometry.Polygon(zip(x, y))\n",
-    "    \n",
-    "    try:\n",
-    "        contours_by_z[z].append(polygon)\n",
-    "    except KeyError:\n",
-    "        contours_by_z[z] = [polygon]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "contours_by_z"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "contour_data = contour_sequences[0].ContourSequence[0].ContourData"
    ]
   },
@@ -144,7 +57,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "assert contour_sequences[0].ContourSequence[0].ContourGeometricType == 'CLOSED_PLANAR'"
+   ]
   },
   {
    "cell_type": "code",
