carry through CT linking
Former-commit-id: c85528c8ff41c5bac601a45db98b32d0d8c3228c

--- a/examples/protyping/dicom/dedupe-contour/001-scratch.ipynb
+++ b/examples/protyping/dicom/dedupe-contour/001-scratch.ipynb
@@ -10,6 +10,7 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "import shapely\n",
+    "import shapely.ops\n",
     "\n",
     "import pydicom\n",
     "\n",
@@ -58,6 +59,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "current_contour_sequence"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# current_contour_sequence"
    ]
   },
@@ -68,10 +78,19 @@
    "outputs": [],
    "source": [
     "contours_by_z = {}\n",
+    "image_sequence_by_z = {}\n",
+    "\n",
+    "expected_contour_keys = {\n",
+    "    pydicom.tag.Tag(*tag)\n",
+    "    for tag in [(0x3006, 0x0050), (0x3006, 0x0046), (0x3006, 0x0042), (0x3006, 0x0016)]\n",
+    "}\n",
     "\n",
     "for contour in current_contour_sequence.ContourSequence:\n",
     "    if contour.ContourGeometricType != 'CLOSED_PLANAR':\n",
     "        raise ValueError(\"Only CLOSED_PLANAR type is supported\")\n",
+    "        \n",
+    "    if set(contour.keys()) != expected_contour_keys:\n",
+    "        raise ValueError(\"Unexpected contour sequence format\")\n",
     "        \n",
     "    contour_data = contour.ContourData\n",
     "        \n",
@@ -90,7 +109,12 @@
     "    try:\n",
     "        contours_by_z[z].append(polygon)\n",
     "    except KeyError:\n",
-    "        contours_by_z[z] = [polygon]"
+    "        contours_by_z[z] = [polygon]\n",
+    "        \n",
+    "    try:\n",
+    "        image_sequence_by_z[z].append(contour.ContourImageSequence)\n",
+    "    except KeyError:\n",
+    "        image_sequence_by_z[z] = [contour.ContourImageSequence]"
    ]
   },
   {
@@ -99,7 +123,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "contours_by_z"
+    "image_sequence_by_z_collapsed = {}\n",
+    "\n",
+    "expected_image_sequence_keys = {\n",
+    "    pydicom.tag.Tag(*tag)\n",
+    "    for tag in [(0x0008, 0x1150), (0x0008, 0x1155)]\n",
+    "}\n",
+    "\n",
+    "for z, image_sequences in image_sequence_by_z.items():\n",
+    "    values = set()\n",
+    "    \n",
+    "    for image_sequence in image_sequences:\n",
+    "        if len(image_sequence) != 1:\n",
+    "            raise ValueError(\"Expected only one item per image sequence\")\n",
+    "            \n",
+    "        image_sequence_item = image_sequence[0]\n",
+    "        \n",
+    "        if set(image_sequence_item.keys()) != expected_image_sequence_keys:\n",
+    "            raise ValueError(\"Unexpected contour image sequence format\")\n",
+    "            \n",
+    "        values.add((\n",
+    "            image_sequence_item.ReferencedSOPClassUID,\n",
+    "            image_sequence_item.ReferencedSOPInstanceUID,\n",
+    "        ))\n",
+    "    \n",
+    "    if len(values) != 1:\n",
+    "        raise ValueError(\"Each z value should only point to one image slice\")\n",
+    "        \n",
+    "    image_sequence_by_z_collapsed[z] = image_sequences[0]"
    ]
   },
   {
@@ -107,14 +158,21 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "merged = {}\n",
+    "\n",
+    "for z, contours in contours_by_z.items():\n",
+    "    merged[z] = shapely.ops.unary_union(contours)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "merged[-100]"
+   ]
   },
   {
    "cell_type": "code",
