added contours that shouldn't be merged

--- a/examples/protyping/dicom/dedupe-contour/001-scratch.ipynb
+++ b/examples/protyping/dicom/dedupe-contour/001-scratch.ipynb
@@ -179,7 +179,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "new_contour_sequence = pydicom.sequence.Sequence()\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "code",
