making new dicom dataset
Former-commit-id: 7982fbcddf3bc2c7b736e6abe0f6f90a0146dc2f

--- a/examples/protyping/dicom/dedupe-contour/001-scratch.ipynb
+++ b/examples/protyping/dicom/dedupe-contour/001-scratch.ipynb
@@ -32,6 +32,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "CONTOUR_GEOMETRIC_TYPE = 'CLOSED_PLANAR'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "dcm = pydicom.read_file(str(dcm_path), force=True)"
    ]
   },
@@ -50,7 +59,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "current_contour_sequence = contour_sequences[0]"
+    "current_contour_sequence = contour_sequences[1]"
    ]
   },
   {
@@ -61,6 +70,22 @@
    "source": [
     "current_contour_sequence"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "current_contour_sequence.ContourSequence[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -86,8 +111,8 @@
     "}\n",
     "\n",
     "for contour in current_contour_sequence.ContourSequence:\n",
-    "    if contour.ContourGeometricType != 'CLOSED_PLANAR':\n",
-    "        raise ValueError(\"Only CLOSED_PLANAR type is supported\")\n",
+    "    if contour.ContourGeometricType != CONTOUR_GEOMETRIC_TYPE:\n",
+    "        raise ValueError(f\"Only {CONTOUR_GEOMETRIC_TYPE} type is supported\")\n",
     "        \n",
     "    if set(contour.keys()) != expected_contour_keys:\n",
     "        raise ValueError(\"Unexpected contour sequence format\")\n",
@@ -159,10 +184,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "merged = {}\n",
+    "all_merged = {}\n",
     "\n",
     "for z, contours in contours_by_z.items():\n",
-    "    merged[z] = shapely.ops.unary_union(contours)"
+    "    all_merged[z] = shapely.ops.unary_union(contours)"
    ]
   },
   {
@@ -171,7 +196,92 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "merged[-100]"
+    "all_merged"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "item = all_merged[-100]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "item[0].exterior.coords.xy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "isinstance(item, shapely.geometry.multipolygon.MultiPolygon)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_coords_from_polygon(polygon):\n",
+    "    return polygon.exterior.coords.xy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_coords_from_multipolygon(multipolygon):\n",
+    "    return [\n",
+    "        get_coords_from_polygon(item) for item in multipolygon\n",
+    "    ]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_coords_from_polygon_or_multipolygon(polygon_or_multipolygon):\n",
+    "    try:\n",
+    "        return [get_coords_from_polygon(polygon_or_multipolygon)]\n",
+    "    except AttributeError:\n",
+    "        return get_coords_from_multipolygon(polygon_or_multipolygon)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dicom_format_coords_by_z = {}\n",
+    "\n",
+    "for z, merged in all_merged.items():\n",
+    "    coords = get_coords_from_polygon_or_multipolygon(merged)\n",
+    "    new_contour_data = []\n",
+    "    for coord in coords:\n",
+    "        stacked_coords = np.hstack(list(zip(coord[0], coord[1], z * np.ones_like(coord[1]))))\n",
+    "        stacked_coords = np.round(stacked_coords, 1)\n",
+    "        stacked_coords = stacked_coords.tolist()\n",
+    "        \n",
+    "        print(stacked_coords)\n",
+    "        \n",
+    "        new_contour_data.append(stacked_coords)\n",
+    "        \n",
+    "    dicom_format_coords_by_z[z] = new_contour_data"
    ]
   },
   {
@@ -181,43 +291,22 @@
    "outputs": [],
    "source": [
     "new_contour_sequence = pydicom.sequence.Sequence()\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "contour_data = contour_sequences[0].ContourSequence[0].ContourData"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x = np.array(contour_data[0::3])\n",
-    "y = np.array(contour_data[1::3])\n",
-    "z = np.array(contour_data[2::3])\n",
     "\n",
-    "z"
+    "for z, contour_items in dicom_format_coords_by_z.items():\n",
+    "    contour_image_sequence = image_sequence_by_z_collapsed[z]\n",
+    "    for contour_data in contour_items:\n",
+    "        new_contour_dataset = pydicom.dataset.Dataset()\n",
+    "        new_contour_dataset.ContourGeometricType = CONTOUR_GEOMETRIC_TYPE\n",
+    "        if len(contour_data) % 3 != 0:\n",
+    "            raise ValueError(\"The contour points should be divisible by 3\")\n",
+    "        \n",
+    "        new_contour_dataset.NumberOfContourPoints = len(contour_data) // 3\n",
+    "        new_contour_dataset.ContourImageSequence = contour_image_sequence\n",
+    "        new_contour_dataset.ContourData = contour_data\n",
+    "        \n",
+    "        new_contour_sequence.append(new_contour_dataset)\n",
+    "        \n",
+    "    "
    ]
   },
   {
@@ -226,7 +315,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "assert len(np.unique(z)) == 1"
+    "new_contour_sequence[0]"
    ]
   },
   {
@@ -234,37 +323,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "x"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "y"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.plot(x, y)\n",
-    "plt.axis('equal')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "shapely.geometry.Polygon(zip(x, y))"
-   ]
+   "source": []
   }
  ],
  "metadata": {
