revert back to pydicom >= 2.0.0
Former-commit-id: aeeb27e01b90dac8b7f24ff045b5bea24b2c7e97

--- a/protyping/auto-segmentation/sb/02-mask-with-edge-falloff.ipynb
+++ b/protyping/auto-segmentation/sb/02-mask-with-edge-falloff.ipynb
@@ -40,7 +40,7 @@
     "dcm_headers = []\n",
     "\n",
     "for dcm_path in dcm_paths:\n",
-    "    dcm_headers.append(pydicom.read_file(str(dcm_path), force=True, stop_before_pixels=True))"
+    "    dcm_headers.append(pydicom.read_file(dcm_path, force=True, stop_before_pixels=True))"
    ]
   },
   {
@@ -76,7 +76,7 @@
    "outputs": [],
    "source": [
     "a_ct_path = list(ct_image_paths.items())[0][1]\n",
-    "dcm = pydicom.read_file(str(a_ct_path), force=True)"
+    "dcm = pydicom.read_file(a_ct_path, force=True)"
    ]
   },
   {
@@ -85,6 +85,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "dcm.file_meta.TransferSyntaxUID = pydicom.uid.ImplicitVRLittleEndian\n",
     "dcm.pixel_array"
    ]
   },
